<resources>
    <string name="app_name">New2</string>
    <string name="label_num1">Number 1</string>
    <string name="label_num2">Number 2</string>
    <string name="edt_num1">23</string>
    <string name="edt_num2">10</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">+</string>
    <string name="btn_multiply">*</string>
    <string name="btn_division">/</string>
    <string name="btn_subtraction">-</string>
</resources>